# controllers/product_controller.go
@@ -2,7 +2,6 @@ package controllers
 
 import (
 	"errors"
-	"log"
 	"net/http"
 	"strings"
 	"time"
@@ -50,12 +49,11 @@ func ProductsRepository(db *gorm.DB) *ProductHandler {
 // @Failure 400 {object} Response
 // @Failure 404 {object} Response
 // @Failure 500 {object} InternalErrorResponse
-// @Router /api/v1/create-product [post]
+// @Router /api/v1/product [post]
 func (p ProductHandler) CreateProduct(ctx *gin.Context) {
 
 	var product ProductCreateReq
 	if err := ctx.ShouldBindJSON(&product); err != nil {
-		log.Println(err)
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
@@ -154,8 +152,6 @@ func (p ProductHandler) GetProducts(ctx *gin.Context) {
 		return
 	}
 
-	log.Println("count is ", count)
-
 	meta := RequestMeta{
 		CurrentPage: page,
 		Limit:       limit,
@@ -230,7 +226,7 @@ type ProductUpdateReq struct {
 // @Failure 400 {object} Response
 // @Failure 404 {object} Response
 // @Failure 500 {object} InternalErrorResponse
-// @Router /api/v1/update-product/{id} [put]
+// @Router /api/v1/product/{id} [put]
 func (p ProductHandler) UpdateProduct(ctx *gin.Context) {
 
 	productId := ctx.Param("id")
@@ -287,7 +283,7 @@ type ProductSale struct {
 // @Failure 400 {object} Response
 // @Failure 404 {object} Response
 // @Failure 500 {object} InternalErrorResponse
-// @Router /api/v1/product-sale [put]
+// @Router /api/v1/product/{id}/sale [put]
 func (p *ProductHandler) ProductSale(ctx *gin.Context) {
 
 	var productSale ProductSale
@@ -336,7 +332,7 @@ func (p *ProductHandler) ProductSale(ctx *gin.Context) {
 // @Failure 400 {object} Response
 // @Failure 404 {object} Response
 // @Failure 500 {object} InternalErrorResponse
-// @Router /api/v1/delete-product/{id} [delete]
+// @Router /api/v1/product/{id} [delete]
 func (p *ProductHandler) DeleteProduct(ctx *gin.Context) {
 	productId := ctx.Param("id")
 
